maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:7: error: 'case' expected but 'catch' found.
    		catch 0 => if(!estFaceMur){
                ^