maze.lessons.maze.randommouse.RandomMouseMaze.scala.code
override def run() {
	var choix = 0;
    while(!estSurBiscuit){
    	choix = random3()
    	choix match{
    		catch 0 => if(!estFaceMur){
    			avance
    		}
    		catch 1 => gauche
    		catch 2 => droite
    	}
    }
}
